# dagster-ext

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yaml  example.env  vscode.Dockerfile
dagster_ext/: __init__.py  extension.py  main.py  pass_through.py
dagster_meltano/: __init__.py  assets.py  generation.py  job.py  jobs.py  meltano_invoker.py  meltano_resource.py  ops.py  schedule.py  utils.py
dagster_meltano/log_processing/: __init__.py  json_processor.py  metadata_processor.py  passthrough_processor.py
files_dagster_ext/dagster/: cookiecutter.json
files_dagster_ext/dagster/{{ cookiecutter.project_name }}/: repository.py
files_dagster_ext/dagster/{{ cookiecutter.project_name }}/deploy/: Dockerfile
files_dagster_ext/github/: cookiecutter.json
files_dagster_ext/orchestrate/: dagster.yaml  repository.py
meltano/: meltano.yml
meltano/edk/: models.py
meltano/tmpk03xco8s/history/: runs.db
meltano/tmpk03xco8s/history/runs/: index.db
meltano/tmpk03xco8s/schedules/: schedules.db
project/: .dockerignore  dagster_cloud_post_install.sh  meltano.yml  requirements.txt
project/orchestrate/: repository.py
project/orchestrate/dagster/: Dockerfile  dagster_cloud_post_install.sh  repository.py  requirements.txt
project/orchestrate/dagster/deploy/: Dockerfile
project/transform/models/nested/: nested.sql
