[tool.poetry]
name = "dagster-ext"
version = "0.0.1"
description = "`dagster-ext` is a Meltano utility extension."
authors = ["Jules Huisman"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.11,>=3.8"
click = "^8.1.3"
typer = "^0.6.1"
dagit = ">=1.0,<1.1"
dagster = ">=1.0,<1.1"
dagster-dbt = ">=0.16,<0.17"
"meltano.edk" = {git = "https://github.com/meltano/edk.git", rev="main"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^3.9.0"
pylint = "^2.15.3"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "dagster_ext" },
    { include = "dagster_meltano" },
    { include = "files_dagster-ext.*" }
]

include = [
   "files_dagster-ext/repository.py"
]

[tool.poetry.scripts]
dagster_extension = 'dagster_ext.main:app'
dagster_invoker = 'dagster_ext.pass_through:pass_through_cli_dagster'
dagit_invoker = 'dagster_ext.pass_through:pass_through_cli_dagit'