[tool.poetry]
name = "dagster-ext"
version = "0.1.0"
description = "`dagster-ext` is a Meltano utility extension."
authors = ["Jules Huisman"]
license = "Apache 2.0"
readme = "README.md"
packages = [
    { include = "dagster_ext" },
    { include = "files_dagster_ext" },
    { include = "meltano" }
]
include = [
   "files_dagster_ext"
]

[tool.poetry.dependencies]
python = "<3.11,>=3.8"
click = "^8.1.3"
typer = "^0.6.1"
dagit = ">=1.0"
dagster = ">=1.0"
dagster-dbt = ">=0.16"
cookiecutter = "^2.1.1"
rich = "^12.5.1"
dagster-meltano = ">=1.0.0"
# Dependencies from Meltano EDK, remove when dependency fixed
structlog = "^21.2.0"
PyYAML = "^6.0.0"
pydantic = "^1.9.0"
devtools = "^0.9.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^3.9.0"
pylint = "^2.15.3"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/quantile-development/dagster-ext"

[tool.poetry.scripts]
dagster_extension = 'dagster_ext.main:app'
dagster_invoker = 'dagster_ext.pass_through:pass_through_cli_dagster'
dagit_invoker = 'dagster_ext.pass_through:pass_through_cli_dagit'
cloud_invoker = 'dagster_ext.pass_through:pass_through_cli_cloud'